--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "orders-ms"]
 	path = orders-ms
 	url = https://github.com/Curso-Microservicios-Nest/orders-ms.git
+[submodule "products-ms"]
+	path = products-ms
+	url = https://github.com/Curso-Microservicios-Nest/products-ms.git
