--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,13 @@
 version: "3.9"
 
 services:
+  # 🚀 NATS
   nats-server:
     image: nats:latest
     ports:
       - "8222:8222"
 
+  # 🟢 Client gateway
   client-gateway:
     build: ./client-gateway
     ports:
@@ -17,10 +19,9 @@ services:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
+  # 🟡 Services
   products-ms:
     build: ./products-ms
-    ports:
-      - "3001:3001"
     volumes:
       - ./products-ms/src:/usr/src/app/src
     command: npm run start:dev
@@ -31,8 +32,6 @@ services:
 
   orders-ms:
     build: ./orders-ms
-    ports:
-      - "3002:3002"
     volumes:
       - ./orders-ms/src:/usr/src/app/src
     command: npm run start:dev
@@ -43,6 +42,21 @@ services:
     depends_on:
       - orders-db
 
+  payments-ms:
+    build: ./payments-ms
+    ports:
+      - "3003:3003"
+    volumes:
+      - ./payments-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3003
+      - BASE_URL=${PAYMENTS_MS_BASE_URL}
+      - PAYPAL_BASE_URL=${PAYPAL_BASE_URL}
+      - PAYPAL_CLIENT_ID=${PAYPAL_CLIENT_ID}
+      - PAYPAL_SECRET=${PAYPAL_SECRET}
+
+  # 💿 Databases
   orders-db:
     image: postgres:16
     container_name: orders-db-postgres
