chore: Update PAYMENTS_MS_BASE_URL in .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ CLIENT_GATEWAY_PORT=3000
 
 # Se usa para direccionar algunos endpoints como "complete-order" y "cancel-order"
 # Para las notificaciones se necesita tener un dominio público, por lo que se puede usar ngrok para pruebas
-PAYMENTS_MS_BASE_URL="http://localhost:3003"
+PAYMENTS_MS_BASE_URL="http://localhost:3003/api"
 
 # Url base de la API de PayPal. En este caso, se usa el sandbox para pruebas
 PAYPAL_BASE_URL="https://api-m.sandbox.paypal.com"
