Feat: Crea contenedor de mongo para users

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,11 @@ services:
     environment:
       - PORT=3004
       - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=mongodb://root:123456@db-mongo-users:27017
     volumes:
       - ./auth-ms/src:/usr/src/app/src
+    depends_on:
+      - db-mongo-users
 
   products-ms:
     build: ./products-ms
@@ -78,3 +81,16 @@ services:
       - "5432:5432"
     volumes:
       - ./orders-ms/postgres_data:/var/lib/postgresql/data
+
+  db-mongo-users:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: 123456
+    ports:
+      - 27018:27017
+    volumes:
+      - mongo_data:/data/db
+
+volumes:
+  mongo_data:
