--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -3,26 +3,28 @@ services:
   nats-server:
     image: nats:latest
     ports:
-      - "8222:8222"
+      - 8222:8222
 
   # 🟢 Client gateway
   client-gateway:
-    build: ./client-gateway
+    build:
+      context: ./client-gateway
+      dockerfile: Dockerfile.dev
     ports:
       - ${CLIENT_GATEWAY_PORT}:3000
     volumes:
       - ./client-gateway/src:/usr/src/app/src
     command: npm run start:dev
     environment:
-      - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
   # 🟡 Services
   auth-ms:
-    build: ./auth-ms
+    build:
+      context: ./auth-ms
+      dockerfile: Dockerfile.dev
     command: npm run start:dev
     environment:
-      - PORT=3004
       - NATS_SERVERS=nats://nats-server:4222
       - DATABASE_URL=${USERS_MS_DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
@@ -30,21 +32,23 @@ services:
       - ./auth-ms/src:/usr/src/app/src
 
   products-ms:
-    build: ./products-ms
+    build:
+      context: ./products-ms
+      dockerfile: Dockerfile.dev
     command: npm run start:dev
     environment:
-      - PORT=3001
       - DATABASE_URL=file:./dev.db
       - NATS_SERVERS=nats://nats-server:4222
     volumes:
       - ./products-ms/src:/usr/src/app/src
 
   orders-ms:
-    build: ./orders-ms
+    build:
+      context: ./orders-ms
+      dockerfile: Dockerfile.dev
     restart: always
     command: npm run start:dev
     environment:
-      - PORT=3002
       - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/orders_db?schema=public
       - NATS_SERVERS=nats://nats-server:4222
     volumes:
@@ -53,12 +57,13 @@ services:
       - orders-db
 
   payments-ms:
-    build: ./payments-ms
+    build:
+      context: ./payments-ms
+      dockerfile: Dockerfile.dev
     ports:
-      - "3003:3003"
+      - 3003:3000
     command: npm run start:dev
     environment:
-      - PORT=3003
       - NATS_SERVERS=nats://nats-server:4222
       - BASE_URL=${PAYMENTS_MS_BASE_URL}
       - PAYPAL_BASE_URL=${PAYPAL_BASE_URL}
@@ -70,7 +75,7 @@ services:
   # 💿 Databases
   orders-db:
     image: postgres:16
-    container_name: orders-db-postgres
+    container_name: db-postgres-orders
     restart: always
     environment:
       POSTGRES_USER: postgres
